<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/mainFragment"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    tools:context=".FirstFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="start"
        android:textSize="@dimen/size_20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameSpace"
        android:textSize="@dimen/size_20sp"
        android:layout_marginBottom="@dimen/margin_20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_gravity="start"
        android:textSize="@dimen/size_20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/citySpace"
        android:textSize="@dimen/size_20sp"
        android:layout_marginBottom="@dimen/margin_20dp"/>

    <Button
        android:id="@+id/btnFirstFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_first_fragment"
        android:textSize="20sp"
        />

</LinearLayout>